--- a/sources/stylesheets/tuktuk.table.styl
+++ b/sources/stylesheets/tuktuk.table.styl
@@ -1,14 +1,10 @@
 @import "__constants.styl"
 
 table
-  margin: 12px 0 12px 0
+  margin: 1em 0
   width: 100%
-  border-spacing: 2px
-
+  border-spacing: 0.1em
   & td, th
-    padding: 10px 8px 10px 8px
-  & th
-    font-weight: 700
-  & td
-    &.highlight
-      font-weight: 700
+    padding: 0.5em 0.5em
+  & th, td.highlight
+    font-weight: bold
