--- a/sources/stylesheets/tuktuk.tip.styl
+++ b/sources/stylesheets/tuktuk.tip.styl
@@ -3,7 +3,6 @@
 
 @import "__constants.styl"
 
-TIP_COLOR = rgba(0,0,0,0.75)
 
 [data-tip]
   position: relative
@@ -19,25 +18,25 @@ TIP_COLOR = rgba(0,0,0,0.75)
     content: ''
     position: absolute
     background: transparent
-    border: 6px solid transparent
+    // border: 6px solid transparent
+    border: TIP solid transparent
     z-index: 1000001
   &:after
     content: attr(data-tip)
-    background: TIP_COLOR
+    background: TIP-COLOR
     color: white
-    text-shadow: 0 -1px 0px black
-    padding: 8px 10px
-    font-size: 13px
-    line-height: 13px
-    font-weight: 600
+    text-shadow: 0 -0.15em 0 #000
+    padding: 0.5em
+    font-size: FONT-SIZE-TINY
+    font-weight: bold
     white-space: nowrap
-    box-shadow: 0 0 8px rgba(0, 0, 0, 0.25)
+    box-shadow: 0 0 1em rgba(0, 0, 0, 0.25)
   &:hover:before, &:hover:after
     opacity: 1
 
   &:not(.tip-top):not(.tip-right):not(.tip-left)
     &:before
-      border-bottom-color: TIP_COLOR
+      border-bottom-color: TIP-COLOR
       margin-top: -12px
     &:after
       margin-left: -18px
@@ -49,7 +48,7 @@ TIP_COLOR = rgba(0,0,0,0.75)
 
   &.tip-top
     &:before
-      border-top-color: TIP_COLOR
+      border-top-color: TIP-COLOR
       margin-bottom: -12px
     &:after
       margin-left: -18px
@@ -63,7 +62,7 @@ TIP_COLOR = rgba(0,0,0,0.75)
     &:before
       margin-right: -12px
       margin-bottom: -6px
-      border-left-color: TIP_COLOR
+      border-left-color: TIP-COLOR
     &:after
       margin-bottom: -14px
     &:before, &:after
@@ -76,7 +75,7 @@ TIP_COLOR = rgba(0,0,0,0.75)
     &:before
       margin-left: -12px
       margin-bottom: -6px
-      border-right-color: TIP_COLOR
+      border-right-color: TIP-COLOR
     &:after
       margin-bottom: -14px
     &:before, &:after
