--- a/sources/stylesheets/__constants.styl
+++ b/sources/stylesheets/__constants.styl
@@ -1,12 +1,20 @@
 @import "../components/CSSmethods/vendor.styl"
 
-font-size         = 13px
-font-size-large   = 1.5em
-font-size-big     = 1.2em
-font-size-small   = 0.9em
-font-size-tiny    = 0.8em
+FONT-SIZE         = 14px
+FONT-SIZE-LARGE   = 1.4em
+FONT-SIZE-BIG     = 1.2em
+FONT-SIZE-DEFAULT = 1em
+FONT-SIZE-SMALL   = 0.9em
+FONT-SIZE-TINY    = 0.8em
 
 AIR               = 1em
 
+HEIGHT-LARGE      = 49px
 
-FIREFOX_FLEX_HACK = 0px
+TIP-COLOR         = rgba(0,0,0,0.75)
+TIP               = 0.4em
+
+// BOXES
+FIREFOX_FLEX_HACK = 0
+HEADER_HEIGHT     = 52px
+ASIDE_WIDTH       = 224px
