--- a/sources/stylesheets/tuktuk.grid.styl
+++ b/sources/stylesheets/tuktuk.grid.styl
@@ -2,9 +2,9 @@
 
 /* ========================= ROW ========================= */
 .row
-  margin: 0px auto
+  margin: 0 auto
   width: 960px
-  overflow: hidden
+  overflow: auto
   display: block
 
   & .row
