--- a/sources/stylesheets/tuktuk.media.styl
+++ b/sources/stylesheets/tuktuk.media.styl
@@ -40,12 +40,10 @@
     & button, .button, a
       text-align: center
       display: block !important
-      margin: 2px 0px !important
+      margin: 2px 0 !important
       line-height: 32px
-
     &.group a
       border: none !important
-
 
 /* ==== Retina ==== */
 @media only screen and (-webkit-min-device-pixel-ratio:1.5)
