--- a/sources/stylesheets/tuktuk.widget.styl
+++ b/sources/stylesheets/tuktuk.widget.styl
@@ -86,7 +86,7 @@ img
 hr
   border: 0
   height: 1px
-  margin: 0px
+  margin: 0
 
 /* ====================== CONTROLS ====================== */
 [data-tuktuk=totals]
