Fix problem with firefox

--- a/sources/stylesheets/tuktuk.boxes.styl
+++ b/sources/stylesheets/tuktuk.boxes.styl
@@ -37,8 +37,9 @@
         transform translateX(-512px)
       &.right
         transform translateX(512px)
+        right: 0px
        &.active
-        transform translateX(0)
+        transform translateX(0) !important
 
     & > div
       width: 100%
