--- a/sources/stylesheets/tuktuk.font.styl
+++ b/sources/stylesheets/tuktuk.font.styl
@@ -36,13 +36,13 @@ h6
     text-transform: uppercase
 
   &.tiny
-    font-size: font-size-tiny
+    font-size: FONT-SIZE-TINY
   &.small
-    font-size: font-size-small
+    font-size: FONT-SIZE-SMALL
   &.big
-    font-size: font-size-big
+    font-size: FONT-SIZE-BIG
   &.large
-    font-size: font-size-large
+    font-size: FONT-SIZE-LARGE
 
 .align, .text
   &.left
@@ -58,6 +58,6 @@ h6
 p
   font-size: 1.1em
 small
-  font-size: font-size-small
+  font-size: FONT-SIZE-SMALL
 strong
   font-weight: 700 !important
