--- a/sources/stylesheets/tuktuk.tip.styl
+++ b/sources/stylesheets/tuktuk.tip.styl
@@ -29,6 +29,7 @@
     padding: 0.5em
     font-size: FONT-SIZE-TINY
     font-weight: bold
+    line-height: 1.0em
     white-space: nowrap
     box-shadow: 0 0 1em rgba(0, 0, 0, 0.25)
   &:hover:before, &:hover:after
