--- a/sources/stylesheets/tuktuk.modal.styl
+++ b/sources/stylesheets/tuktuk.modal.styl
@@ -13,6 +13,7 @@
 
   & header
     padding: (AIR / 1.9) AIR
+
   & article, footer
     padding: (AIR / 1.5) AIR
 
@@ -109,9 +110,7 @@
   top: 0
   bottom: 0
   left: 0
-  background: rgba(0,0,0,0.8)
   z-index: 1980
-
   opacity: 0
   transition all 250ms
   visibility: hidden
@@ -119,6 +118,8 @@
   &.active
     opacity: 1
     visibility: visible
+    &:not([data-active=true])
+      background: rgba(0,0,0,0.8)
     &[data-loading=true]
       background: rgba(0,0,0,0)
       & > .loading
