--- a/sources/stylesheets/tuktuk.list.styl
+++ b/sources/stylesheets/tuktuk.list.styl
@@ -10,7 +10,7 @@ ul
     padding: 0
     background: none
 
-  &.none
+  &.empty
     list-style: none outside
     margin: 0
   &.square, &.square ul
