--- a/sources/themes/theme.default.styl
+++ b/sources/themes/theme.default.styl
@@ -136,7 +136,7 @@ body
 
 
   & [data-control="checkbox"]
-    RADIUS = 1em
+    RADIUS = 2em
     background: darken(LIGHT, 25%)
     color: darken(LIGHT, 5%)
     font-weight: 700
@@ -155,7 +155,6 @@ body
     background: WHITE
     color: COLOR
     border: 0.1em solid lighten(COLOR, 75%)
-    // border-radius BORDER-RADIUS
     & tr
       &:nth-child(even) td
         background-color: lighten(COLOR, 95%)
@@ -175,12 +174,12 @@ body
       color: #fff !important
       border-radius BORDER-RADIUS
       background-color: THEME
-      box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15), 0 1px 0 rgba(0,0,0,0.075)
+      box-shadow: inset 0 -1px rgba(0,0,0,0.1), 0 1px rgba(0,0,0,0.075)
       text-shadow:  0 1px rgba(0,0,0,0.1)
       &:hover
-        box-shadow: inset 0 0 5em rgba(0,0,0,0.15), inset 0 -1px 0 rgba(0,0,0,0.15), 0 1px 0 rgba(0,0,0,0.075)
+        box-shadow: inset 0 0 5em rgba(0,0,0,0.1), inset 0 -1px rgba(0,0,0,0.15), 0 1px rgba(0,0,0,0.075)
       &:active
-        box-shadow inset 0 0 5em rgba(0,0,0,0.2), inset 0 1px 0 rgba(0,0,0,0.2)
+        box-shadow inset 0 0 5em rgba(0,0,0,0.2), inset 0 1px rgba(0,0,0,0.2)
       &.secondary
         background-color: darken(SECONDARY, 25%)
        &.success
