Added named color list. Added 2px side margin for buttons to prevent visual uglyness. Added hoverable class for tables to make rows highlight on hover.

--- a/sources/stylesheets/tuktuk.table.styl
+++ b/sources/stylesheets/tuktuk.table.styl
@@ -4,7 +4,12 @@ table
   margin: 1em 0
   width: 100%
   border-spacing: 0.1em
+
   & td, th
     padding: 0.5em 0.5em
+
+  &.hoverable tr:hover td
+  	background-color: rgba(55, 130, 130. 0.3)
+
   & th, td.highlight
     font-weight: bold
