Fixed typos. Added package.json to simplify dependencies installation. Added a few lines on building sources to README.

--- a/sources/stylesheets/tuktuk.table.styl
+++ b/sources/stylesheets/tuktuk.table.styl
@@ -9,7 +9,7 @@ table
     padding: 0.5em 0.5em
 
   &.hoverable tr:hover td
-  	background-color: rgba(55, 130, 130. 0.3)
+    background-color: rgba(55, 130, 130, 0.3)
 
   & th, td.highlight
     font-weight: bold
