Remove all UI color

--- a/sources/stylesheets/tuktuk.button.styl
+++ b/sources/stylesheets/tuktuk.button.styl
@@ -37,6 +37,7 @@
   &.disabled, &:disabled
     cursor: default
 
+  // @todo: Loading buttons
   transition background-color 400ms
   &[data-loading]
     & > .icon
@@ -44,9 +45,7 @@
     & > .loading
       display: inline-block
       & > .container
-        -webkit-animation: loading 600ms  infinite linear
-        moz-animation:  loading 600ms  infinite linear
-        animation:  loading 600ms  infinite linear
+        animation loading 600ms infinite linear
 
 
     & > .loading
