--- a/sources/stylesheets/tuktuk.font.styl
+++ b/sources/stylesheets/tuktuk.font.styl
@@ -55,5 +55,6 @@ h6
 /* ========================= BASIC ELEMENTS ========================= */
 small
   font-size: FONT-SIZE-SMALL
+
 strong
-  font-weight: 700 !important
+  font-weight: bold
