--- a/sources/themes/default/__constants.styl
+++ b/sources/themes/default/__constants.styl
@@ -1,4 +1,4 @@
-@import "../components/CSSmethods/vendor.styl"
+@import "../../components/CSSmethods/vendor.styl"
 
 /* BUTTONS */
 WHITE           = #fff
@@ -14,7 +14,5 @@ DARK         = #2C3E50
 /* OTHERS */
 TRANSITION      = 400ms
 BORDER-RADIUS   = 4px
-
-
 
 AVATAR_DEFAULT  = "http://www.murketing.com/journal/wp-content/uploads/2009/04/vimeo.jpg"
