New type of loading

--- a/sources/stylesheets/tuktuk.media.styl
+++ b/sources/stylesheets/tuktuk.media.styl
@@ -47,3 +47,11 @@
 @media only screen and (-webkit-min-device-pixel-ratio:1.5)
   header
     height: auto
+
+
+
+@media only screen and (max-width: 528px)
+  [data-tuktuk="modal"]
+    left: 5% !important
+    width: w = 90% !important
+    margin-left: 0 !important
