--- a/sources/themes/mock/tuktuk.mock.modal.styl
+++ b/sources/themes/mock/tuktuk.mock.modal.styl
@@ -20,3 +20,7 @@
 
   & > .loading
     background-color: rgba(0,0,0,0.75)
+    border-radius: BORDER-RADIUS
+    &::before, &::after 
+      background: #fff
+      border-radius 1em
