--- a/sources/themes/mock/__constants.styl
+++ b/sources/themes/mock/__constants.styl
@@ -3,7 +3,7 @@
 /* DEFAULTS */
 COLOR           = #444
 BACKGROUND      = #fff
-THEME           = #1ABC9C
+THEME           = #3498DB
 
 /* BUTTONS */
 WHITE           = #fff
