--- a/sources/themes/mock/tuktuk.mock.layout.styl
+++ b/sources/themes/mock/tuktuk.mock.layout.styl
@@ -42,7 +42,7 @@ body
   & .color
     &.white
       color: WHITE !important
-    &.theme
+    &:not(.bck).theme
       color: THEME !important
     &.default
       color: COLOR !important
