--- a/sources/themes/mock/tuktuk.mock.boxes.styl
+++ b/sources/themes/mock/tuktuk.mock.boxes.styl
@@ -1,12 +1,9 @@
 [data-tuktuk=boxes]
   /* ====================== ASIDE ====================== */
   & aside
-    background: WHITE
     color: lighten(COLOR, 15%)
     &.absolute
-      transition all 400ms
-    & header
-      box-shadow: inset 0 -1px 0 rgba(0,0,0,0.1)
+      transition all TRANSITION
 
   /* ====================== MENU ====================== */
   & aside [data-menu] > a:not(.button)
