--- a/sources/themes/mock/tuktuk.mock.layout.styl
+++ b/sources/themes/mock/tuktuk.mock.layout.styl
@@ -3,21 +3,16 @@
 body
   color: COLOR
   background: BACKGROUND
-  font-size: 15px
+  font-size: 13.5px
   font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif
   font-weight: 300
   letter-spacing: -0.05em
   
+  /* ====================== LINKS ====================== */
   & a
     color: COLOR
     &:not(.button):hover, &:not(.button):active
       color: THEME
-
-  // &:not(.color):not(.dark) a
-  //   color: COLOR
-  //   &:not(.button):hover, &:not(.button):active
-  //     color: THEME
-
   
   /* ====================== BACKGROUNDS ====================== */
   & .bck
@@ -27,7 +22,6 @@ body
       background-color: DARK
     &.theme
       background-color: THEME
-
     &.theme, &.dark
       color: WHITE
       & a
@@ -46,6 +40,5 @@ body
       color: THEME !important
     &.default
       color: COLOR !important
-      
   & strong
     font-weight: 700 !important
