Add accordion layout

--- a/sources/stylesheets/tuktuk.widget.styl
+++ b/sources/stylesheets/tuktuk.widget.styl
@@ -38,15 +38,15 @@
 .padding-none
   padding: 0
 .padding
-  padding: AIR
+  padding: AIR !important
 .padding-left
-  padding-left: AIR
+  padding-left: AIR !important
 .padding-right
-  padding-right: AIR
+  padding-right: AIR !important
 .padding-top
-  padding-top: AIR
+  padding-top: AIR !important
 .padding-bottom
-  padding-bottom: AIR
+  padding-bottom: AIR !important
 
 
 /* ================== IMAGE & MEDIA ================== */
