--- a/sources/themes/default/__constants.styl
+++ b/sources/themes/default/__constants.styl
@@ -1,18 +1,23 @@
 @import "../../components/CSSmethods/vendor.styl"
 
+/* DEFAULTS */
+COLOR           = #222
+BACKGROUND      = #fff
+THEME           = #4bc613
+
 /* BUTTONS */
 WHITE           = #fff
-COLOR           = #34495e
-THEME           = #3498db
 /* BUTTONS */
-SECONDARY       = #ECF0F1
+BUTTON          = #555
+DISABLED        = #444
 SUCCESS         = #2ECC71
 ALERT           = #E74C3C
 /* BACKGROUNDS */
-LIGHT           = #ECF0F1
-DARK         = #2C3E50
+LIGHT           = #ddd
+DARK            = #222
 /* OTHERS */
-TRANSITION      = 400ms
-BORDER-RADIUS   = 4px
+TRANSITION      = 300ms
+BORDER-RADIUS   = .2rem
+FORM_BORDER     = #BDC3C7
 
 AVATAR_DEFAULT  = "http://www.murketing.com/journal/wp-content/uploads/2009/04/vimeo.jpg"
