--- a/sources/themes/default/tuktuk.default.styl
+++ b/sources/themes/default/tuktuk.default.styl
@@ -1,17 +1,18 @@
+@import url("http://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,400")
+
 body
   color: COLOR
   background: BACKGROUND
-  font-size: 13.5px
-  font-family: "Open Sans", "Helvetica Neue", Helvetica, sans-serif
+  font-size: 16px
+  font-family: "Roboto", "Helvetica Neue", Helvetica, sans-serif
   font-weight: 300
-  letter-spacing: -0.05em
-  
+
   /* ====================== LINKS ====================== */
   & a
     color: COLOR
     &:not(.button):hover, &:not(.button):active
       color: THEME
-  
+
   /* ====================== BACKGROUNDS ====================== */
   & .bck
     &.light
