--- a/sources/stylesheets/tuktuk.font.styl
+++ b/sources/stylesheets/tuktuk.font.styl
@@ -2,18 +2,19 @@
 h1, h2, h3, h4, h5, h6
   margin: 0
   padding: 0
+  line-height: inherit
 h1
-  font-size: 2.6em
+  font-size: 2.6rem
 h2
-  font-size: 2.2em
+  font-size: 2.2rem
 h3
-  font-size: 1.8em
+  font-size: 1.8rem
 h4
-  font-size: 1.6em
+  font-size: 1.6rem
 h5
-  font-size: 1.3em
+  font-size: 1.3rem
 h6
-  font-size: 1.0em
+  font-size: 1.0rem
 
 /* ========================= TEXT ========================= */
 .text
