--- a/source/styl/__init.styl
+++ b/source/styl/__init.styl
@@ -1,4 +1,4 @@
-@import "../components/CSSmethods/vendor.styl"
+@import "STYLmethods/vendor.styl"
 
 FONT-SIZE         = 14px
 FONT-SIZE-LARGE   = 1.4em
