Using new version of flexbox

--- a/source/styl/__init.styl
+++ b/source/styl/__init.styl
@@ -1,17 +1,18 @@
 @import "STYLmethods/vendor.styl"
 
-FONT-SIZE         = 14px
-FONT-SIZE-LARGE   = 1.4em
-FONT-SIZE-BIG     = 1.2em
-FONT-SIZE-DEFAULT = 1em
-FONT-SIZE-SMALL   = 0.9em
+// -- FONT --
+FONT-SIZE         = 16px
 FONT-SIZE-TINY    = 0.8em
+FONT-SIZE-SMALL   = 0.9em
+FONT-SIZE-DEFAULT = 1em
+FONT-SIZE-BIG     = 1.2em
+FONT-SIZE-LARGE   = 1.4em
 
 AIR               = 1em
 
 HEIGHT-LARGE      = 49px
 
+UNIT              = 2rem
 // BOXES
-FIREFOX_FLEX_HACK = 0
-HEADER_HEIGHT     = 52px
-ASIDE_WIDTH       = 224px
+HEADER_HEIGHT     = (2 * UNIT)
+ASIDE_WIDTH       = (8 * UNIT)
