--- a/source/styl/tuktuk.boxes.styl
+++ b/source/styl/tuktuk.boxes.styl
@@ -1,57 +1,43 @@
 [data-tuktuk=boxes]
-  display-box()
-  box-pack(justify)
+  display-flex()
+  align-content stretch
   overflow: hidden
 
   /* ====================== SCAFFOLD ====================== */
-  & > aside, & > section
-    display-box()
-    box-orient(vertical)
+  > aside, > section
+    display-flex()
+    flex-direction column
+    height: inherit
+    margin: 0px
+    padding: 0px
 
-    & > header, > footer, > div > header, > div > footer
-      box-flex(0)
+    > header, > footer
+      flex-shrink 0
       display: block
       height: HEADER_HEIGHT
       line-height: HEADER_HEIGHT
       padding: 0 AIR
 
-    & article
-      box-flex(1)
-      height: FIREFOX_FLEX_HACK
+    > header
+      order 1
+    > article
+      order 2
+      flex-shrink 1
+      height: inherit
+    > footer
+      order 3
 
-  & > aside
-    z-index: 2
-    box-flex(0)
-    min-width: ASIDE_WIDTH
-    margin: 0 !important
-    float: none !important
+  > aside
+    flex-shrink 0
+    width: ASIDE_WIDTH
 
     &.absolute
+      z-index: 1980
       position: absolute
-      height: inherit
-
       &:not(.right)
-        transform translateX(-512px)
+        transform translateX(-100%)
       &.right
-        transform translateX(512px)
+        transform translateX(100%)
         right: 0px
        &.active
         transform translateX(0) !important
-
-    & > div
-      width: 100%
-      height: 100%
-      display-box()
-      box-orient(vertical)
-
-  & > section
-    box-flex(1)
-    z-index: 0
-
-  /* ====================== WIDGETS ====================== */
-  & > aside, & > section
-    & .session
-      height: inherit
-      & > *
-        display: inline-block
-        float: left
