--- a/source/styl/theme/__init.styl
+++ b/source/styl/theme/__init.styl
@@ -1,9 +1,14 @@
 @import "../STYLmethods/vendor.styl"
 
+@import url("http://fonts.googleapis.com/css?family=Open+Sans:400,700")
+
 /* DEFAULTS */
 COLOR           = #222
 BACKGROUND      = #fff
 THEME           = #4bc613
+
+FONT-FAMILY     = "Open Sans"
+FONT-WEIGHT     = 400
 
 /* BUTTONS */
 WHITE           = #fff
@@ -17,7 +22,7 @@ LIGHT           = #ddd
 DARK            = #222
 /* OTHERS */
 TRANSITION      = 300ms
-BORDER-RADIUS   = .2rem
+BORDER-RADIUS   = .1rem
 FORM_BORDER     = #BDC3C7
-
 AVATAR_DEFAULT  = "http://www.murketing.com/journal/wp-content/uploads/2009/04/vimeo.jpg"
+
