--- a/source/styl/theme/tuktuk.default.button.styl
+++ b/source/styl/theme/tuktuk.default.button.styl
@@ -1,7 +1,7 @@
 .button, button
-  font-weight: 700 !important
-  -webkit-font-smoothing: antialiased
+  font-weight: FONT-WEIGHT
   border-radius: BORDER-RADIUS
+  border-radius: 2rem
   &:not(.transparent):not(:disabled)
     color: #fff !important
     background-color: BUTTON
