--- a/source/styl/tuktuk.scroll.styl
+++ b/source/styl/tuktuk.scroll.styl
@@ -1,6 +1,6 @@
 [data-tuktuk=boxes] ::-webkit-scrollbar
-  width: 0.25em
-  height: 0.25em
+  width: SIZE = 0.2rem
+  height: SIZE
   position: absolute
 
 
@@ -51,17 +51,7 @@
 /* The thumb itself */
 [data-tuktuk=boxes] ::-webkit-scrollbar-thumb:vertical
   height: 1em
-  background-color: rgba(0,0,0,0.4)
 
 /* The thumb itself */
 [data-tuktuk=boxes] ::-webkit-scrollbar-thumb:horizontal
   height: 1em
-  background-color: gray
-
-/* Corner */
-[data-tuktuk=boxes] ::-webkit-scrollbar-corner:vertical
-  background-color: black
-
-/* Resizer */
-[data-tuktuk=boxes] ::-webkit-scrollbar-resizer:vertical
-  background-color: gray
